--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,13 @@ services:
     volumes:
       - ./.docker/postgres:/var/lib/postgresql/data
     restart: unless-stopped
+  db2:
+    image: mysql:8
+    environment:
+      MYSQL_ROOT_PASSWORD: mysecretpassword
+      MYSQL_DATABASE: ormgpt
+    restart: unless-stopped
+    ports:
+      - "3306:3306"
+    volumes:
+        - ./.docker/mysql:/var/lib/mysql
